# SPDX-FileCopyrightText: 2026 Joel Winarske
# SPDX-License-Identifier: MIT

# v4l2-webrtc-codec — GN build.
#
# Absorbed into libwebrtc.so behind `lw_enable_v4l2_codec=true` when pulled
# into the webrtc checkout. The decoder uses only the V4L2 UAPI (no DRM/KMS,
# no external libraries), so there is nothing to stage or link beyond webrtc.

declare_args() {
  # The absorbing target (//libwebrtc) owns `lw_enable_v4l2_codec` and gates the
  # dependency on this source_set; it is intentionally not redeclared here.
}

config("v4l2wc_public_config") {
  include_dirs = [
    "include",
    "third_party/lw_abi",
  ]
}

# The fork headers the decoder pulls in ("c/lw_video_sink.h",
# "src/internal/lw_native_video_frame_buffer.h"). The fork is checked out at
# //libwebrtc in the absorbing build tree.
config("v4l2wc_private_config") {
  include_dirs = [
    "//libwebrtc",
    "//libwebrtc/include",
  ]
}

# Public C entry + the decoder/factory. Hidden visibility: only the C entry
# points are exported by the absorbing libwebrtc.so (CI symbol audit).
#
# The stateful decoder drives a V4L2 M2M device directly (decode + VIDIOC_EXPBUF
# to DMA-BUF) and wraps each decoded NV12 buffer as the fork's
# LwNativeVideoFrameBuffer. The pure-logic parse/ layer (built and fuzzed
# standalone via CMakeLists.txt) is compiled in for SPS-based dimension sizing.
source_set("v4l2wc") {
  public = [ "include/v4l2wc/v4l2wc.h" ]
  sources = [
    "parse/bit_reader.h",
    "parse/h264/nal.cc",
    "parse/h264/nal.h",
    "parse/h264/pps.cc",
    "parse/h264/pps.h",
    "parse/h264/slice_header.cc",
    "parse/h264/slice_header.h",
    "parse/h264/sps.cc",
    "parse/h264/sps.h",
    "src/dma_decoder.cc",
    "src/dma_decoder.h",
    "src/v4l2_decoder.cc",
    "src/v4l2_decoder.h",
    "src/v4l2_m2m_decoder.cc",
    "src/v4l2_m2m_decoder.h",
    "src/v4l2wc_factory.cc",
    # VAAPI engine (amdgpu/Steam Deck). libva is loaded at runtime (dlopen), so
    # only the vendored headers are needed at build time -- no libva link.
    "src/va_h264_parse.cc",
    "src/va_h264_parse.h",
    "src/vaapi_h264_decoder.cc",
    "src/vaapi_h264_decoder.h",
  ]
  public_configs = [ ":v4l2wc_public_config" ]
  # symbol_visibility_hidden is already in the default config set; only the
  # decoder's own C entry points are exported by the absorbing libwebrtc.so.
  configs += [ ":v4l2wc_private_config" ]
  include_dirs = [
    ".",             # for "parse/..." and "src/..." includes
    "third_party/va",  # vendored libva headers (compile-time only; dlopen'd)
  ]

  deps = [
    "//api:make_ref_counted",
    "//api/environment:environment",
    "//api/video:encoded_image",
    "//api/video:video_frame",
    "//api/video_codecs:video_codecs_api",
    "//media:media_constants",
    "//modules/video_coding:webrtc_h264",
    "//rtc_base:logging",
    "//third_party/abseil-cpp/absl/strings:strings",
  ]
}
